# bevy_creator

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml  config_fast_builds.toml
assets/materials/: test.std.mat
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  render.rs
crates/bevy_assets/src/: lib.rs  render.rs
crates/bevy_bootstrap/: Cargo.toml
crates/bevy_bootstrap/macros/src/: lib.rs
crates/bevy_bootstrap/src/: lib.rs
crates/bevy_config/src/: lib.rs
crates/bevy_creator/: Cargo.toml  build.rs
crates/bevy_creator/src/: main.rs
crates/bevy_editor/: Cargo.toml
crates/bevy_editor/src/: bevy_ui_plugin.rs  codegen.rs  dock.rs  editor.rs  editor_config.rs  lib.rs  scene.rs
crates/bevy_editor/src/grid/: grid.wgsl  render.rs
crates/bevy_editor/src/panels/: explorer.rs  scene.rs
crates/bevy_helper/: Cargo.toml
crates/bevy_helper/src/: winit.rs
crates/bevy_hub/: Cargo.toml
crates/bevy_hub/src/: main.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/macros/: Cargo.toml
crates/bootstrap/macros/src/: lib.rs
crates/bootstrap/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/creator/: Cargo.toml
crates/creator/src/: main.rs
crates/editor/: Cargo.toml
crates/editor/src/: camera.rs  dock.rs  editor.rs  editor_config.rs  egui_config.rs  lib.rs  main.rs  project_dir.rs  scene.rs  transform_gizmo_ext.rs  window_config.rs
crates/editor/src/asset/processors/: mod.rs
crates/editor/src/grid/: mod.rs
crates/editor/src/panels/: explorer.rs  hierarchy.rs  inspector.rs  mod.rs  scene.rs
crates/helper/src/: fs.rs  lib.rs
crates/hub/: Cargo.toml
crates/hub/src/: main.rs
editor/: Cargo.toml
editor/src/: demo_scene.rs  editor.rs  egui_config.rs  main.rs  panel.rs  projects.rs
editor/src/panels/: game.rs  inspector.rs  mod.rs  resources.rs  scene.rs  viewport.rs
engine/app/: Cargo.toml
engine/app/src/: lib.rs
src/: assets.rs  config.rs  default_plugins.rs  demo_scene.rs  dock.rs  editor.rs  egui_config.rs  egui_picking.rs  egui_picking_plugin.rs  file_io.rs  main.rs  panel.rs  projects.rs  selection.rs  transform_gizmo_ext.rs  ui_plugin.rs  util.rs  window_config.rs  window_persistence.rs
src/asset/: mod.rs
src/asset/processors/: mesh.rs  mod.rs  standard_material.rs
src/panels/: assets.rs  explorer.rs  hierarchy.rs  inspector.rs  resources.rs  scene.rs
src/ui_plugin/: bevy_ui_plugin.rs  egui_persistence.rs  undo_plugin.rs
templates/project/: Cargo.toml
templates/project/.cargo/: config.toml
