[package]
name = "bevy_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "BevyEditor"

[dependencies]
bevy = { version = "0.15", features = ["serialize", "bevy_dev_tools", "bevy_remote", "asset_processor"] }
bevy_egui = "0.32.0"
egui_dock = { version = "0.15.0", features = ["serde"] }
bevy-inspector-egui = "0.29.1"
transform-gizmo-egui = "0.4"
rfd = "0.15.2"
image = "0.25"
winit = "0.30"
libloading = "0.8.6"
uuid = "1.12"
thiserror = "2"

serde = "1.0"
serde_json = "1.0"
directories = "6.0.0"

[workspace]
resolver = "2"
members = ["crates/*"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[patch.crates-io]
bevy = { path = "vendor/bevy" }
bevy_a11y = { path = "vendor/bevy/crates/bevy_a11y" }
bevy_app = { path = "vendor/bevy/crates/bevy_app" }
bevy_core = { path = "vendor/bevy/crates/bevy_core" }
bevy_derive = { path = "vendor/bevy/crates/bevy_derive" }
bevy_diagnostic = { path = "vendor/bevy/crates/bevy_diagnostic" }
bevy_ecs = { path = "vendor/bevy/crates/bevy_ecs" }
bevy_state = { path = "vendor/bevy/crates/bevy_state" }
bevy_hierarchy = { path = "vendor/bevy/crates/bevy_hierarchy" }
bevy_input = { path = "vendor/bevy/crates/bevy_input" }
bevy_log = { path = "vendor/bevy/crates/bevy_log" }
bevy_math = { path = "vendor/bevy/crates/bevy_math" }
bevy_ptr = { path = "vendor/bevy/crates/bevy_ptr" }
bevy_reflect = { path = "vendor/bevy/crates/bevy_reflect" }
bevy_time = { path = "vendor/bevy/crates/bevy_time" }
bevy_transform = { path = "vendor/bevy/crates/bevy_transform" }
bevy_utils = { path = "vendor/bevy/crates/bevy_utils" }
bevy_window = { path = "vendor/bevy/crates/bevy_window" }
bevy_tasks = { path = "vendor/bevy/crates/bevy_tasks" }
bevy_animation = { path = "vendor/bevy/crates/bevy_animation" }
bevy_asset = { path = "vendor/bevy/crates/bevy_asset" }
bevy_audio = { path = "vendor/bevy/crates/bevy_audio" }
bevy_color = { path = "vendor/bevy/crates/bevy_color" }
bevy_core_pipeline = { path = "vendor/bevy/crates/bevy_core_pipeline" }
bevy_dev_tools = { path = "vendor/bevy/crates/bevy_dev_tools" }
bevy_gilrs = { path = "vendor/bevy/crates/bevy_gilrs" }
bevy_gizmos = { path = "vendor/bevy/crates/bevy_gizmos" }
bevy_gltf = { path = "vendor/bevy/crates/bevy_gltf" }
bevy_image = { path = "vendor/bevy/crates/bevy_image" }
bevy_pbr = { path = "vendor/bevy/crates/bevy_pbr" }
bevy_picking = { path = "vendor/bevy/crates/bevy_picking" }
bevy_remote = { path = "vendor/bevy/crates/bevy_remote" }
bevy_render = { path = "vendor/bevy/crates/bevy_render" }
bevy_scene = { path = "vendor/bevy/crates/bevy_scene" }
bevy_sprite = { path = "vendor/bevy/crates/bevy_sprite" }
bevy_text = { path = "vendor/bevy/crates/bevy_text" }
bevy_ui = { path = "vendor/bevy/crates/bevy_ui" }
bevy_winit = { path = "vendor/bevy/crates/bevy_winit" }

pin-project-lite = { git = "https://github.com/gehud/pin-project-lite.git", branch = "dynamic" }
bitflags = { git = "https://github.com/gehud/bitflags.git", branch = "dynamic" }
serde = { git = "https://github.com/gehud/serde.git", branch = "dynamic" }
either = { git = "https://github.com/gehud/either.git", branch = "dynamic" }
glam = { git = "https://github.com/gehud/glam.git", branch = "dynamic" }
getrandom = { git = "https://github.com/gehud/getrandom.git", branch = "dynamic" }
zerocopy = { git = "https://github.com/gehud/zerocopy.git", branch = "dynamic" }
raw-window-handle = { git = "https://github.com/gehud/raw-window-handle.git", branch = "dynamic" }
log = { git = "https://github.com/gehud/log.git", branch = "dynamic" }
crossbeam-channel = { git = "https://github.com/gehud/crossbeam.git", branch = "dynamic" }
windows-result = { git = "https://github.com/gehud/windows.git", branch = "dynamic" }
memchr = { git = "https://github.com/gehud/memchr.git", branch = "dynamic" }
thiserror = { git = "https://github.com/gehud/thiserror.git", branch = "dynamic" }
tinyvec = { git = "https://github.com/gehud/tinyvec.git", branch = "dynamic" }
winapi = { git = "https://github.com/gehud/winapi.git", branch = "dynamic" }
regex = { git = "https://github.com/gehud/regex.git", branch = "dynamic" }
lazy_static = { git = "https://github.com/gehud/lazy-static.git", branch = "dynamic" }
serde_json = { git = "https://github.com/gehud/serde-json.git", branch = "dynamic" }
anyhow = { git = "https://github.com/gehud/anyhow.git", branch = "dynamic" }
async-lock = { git = "https://github.com/gehud/async-lock.git", branch = "dynamic" }
event-listener = { git = "https://github.com/gehud/event-listener.git", branch = "dynamic" }
event-listener-strategy = { git = "https://github.com/gehud/event-listener-strategy.git", branch = "dynamic" }
fnv = { git = "https://github.com/gehud/fnv.git", branch = "dynamic" }
unicode-segmentation = { git = "https://github.com/gehud/unicode-segmentation.git", branch = "dynamic" }

transform-gizmo-egui = { git = "https://github.com/gehud/transform-gizmo.git" }