# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[workspace]
resolver = "2"
members = ["crates/*"]

[patch.crates-io]
bevy = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_a11y = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_app = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_core = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_derive = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_diagnostic = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_ecs = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_state = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_hierarchy = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_input = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_log = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_math = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_ptr = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_reflect = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_time = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_transform = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_utils = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_window = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_tasks = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_animation = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_asset = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_audio = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_color = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_core_pipeline = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_dev_tools = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_gilrs = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_gizmos = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_gltf = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_image = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_pbr = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_picking = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_remote = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_render = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_scene = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_sprite = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_text = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_ui = { git = "https://github.com/gehud/bevy.git", branch = "assets" }
bevy_winit = { git = "https://github.com/gehud/bevy.git", branch = "assets" }

pin-project-lite = { git = "https://github.com/gehud/pin-project-lite.git", branch = "dynamic" }
bitflags = { git = "https://github.com/gehud/bitflags.git", branch = "dynamic" }
serde = { git = "https://github.com/gehud/serde.git", branch = "dynamic" }
either = { git = "https://github.com/gehud/either.git", branch = "dynamic" }
glam = { git = "https://github.com/gehud/glam.git", branch = "dynamic" }
getrandom = { git = "https://github.com/gehud/getrandom.git", branch = "dynamic" }
zerocopy = { git = "https://github.com/gehud/zerocopy.git", branch = "dynamic" }
raw-window-handle = { git = "https://github.com/gehud/raw-window-handle.git", branch = "dynamic" }
log = { git = "https://github.com/gehud/log.git", branch = "dynamic" }
crossbeam-channel = { git = "https://github.com/gehud/crossbeam.git", branch = "dynamic" }
windows-result = { git = "https://github.com/gehud/windows.git", branch = "dynamic" }
memchr = { git = "https://github.com/gehud/memchr.git", branch = "dynamic" }
thiserror = { git = "https://github.com/gehud/thiserror.git", branch = "dynamic" }
tinyvec = { git = "https://github.com/gehud/tinyvec.git", branch = "dynamic" }
winapi = { git = "https://github.com/gehud/winapi.git", branch = "dynamic" }
regex = { git = "https://github.com/gehud/regex.git", branch = "dynamic" }
lazy_static = { git = "https://github.com/gehud/lazy-static.git", branch = "dynamic" }
serde_json = { git = "https://github.com/gehud/serde-json.git", branch = "dynamic" }
anyhow = { git = "https://github.com/gehud/anyhow.git", branch = "dynamic" }
async-lock = { git = "https://github.com/gehud/async-lock.git", branch = "dynamic" }
event-listener = { git = "https://github.com/gehud/event-listener.git", branch = "dynamic" }
event-listener-strategy = { git = "https://github.com/gehud/event-listener-strategy.git", branch = "dynamic" }
fnv = { git = "https://github.com/gehud/fnv.git", branch = "dynamic" }
unicode-segmentation = { git = "https://github.com/gehud/unicode-segmentation.git", branch = "dynamic" }

transform-gizmo-egui = { git = "https://github.com/gehud/transform-gizmo.git" }
