[package]
name = "bevy_editor"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "BevyEditor"

[dependencies]
bevy = { version = "0.15", features = ["serialize"] }

bevy_egui = { git = "https://github.com/gehud/bevy_egui.git" }
egui_dock = { version = "0.14", features = ["serde"] }
transform-gizmo-egui = "0.4"
bevy-inspector-egui = "0.28"
rfd = "0.15.2"

serde = "1.0"
serde_json = "1.0"
directories = "5.0"
