[package]
name = "bevy_editor"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "BevyEditor"

[dependencies]
bevy = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", features = ["serialize"] }
bevy_egui = { git = "https://github.com/gehud/bevy_egui.git", branch = "bevy_editor" }
egui_dock = { version = "0.14", features = ["serde"] }
transform-gizmo-egui = { git = "https://github.com/gehud/transform_gizmo.git" }
bevy-inspector-egui = { git = "https://github.com/gehud/bevy_inspector_egui.git", branch = "bevy_editor" }
rfd = "0.15.2"
image = "0.25"
winit = "0.30"

serde = "1.0"
serde_json = "1.0"
directories = "5.0"
